Added post/patch to swager docs
